fix: button alignment

--- a/packages/web-ui/css/buttons.module.css
+++ b/packages/web-ui/css/buttons.module.css
@@ -6,7 +6,7 @@
     display: inline-flex;
     flex-direction: row;
     gap: var(--local-gutter-y) var(--local-gutter-x);
-    align-items: baseline;
+    align-items: center;
 
     &.borderless:not(.disabled, :disabled),
     &.borderless.primary:not(.disabled, :disabled) {
@@ -94,6 +94,7 @@
 
     >* {
         border-radius: 0 !important;
+        align-items: center;
     }
 
     >:first-child {
